--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-.header {
+/*.header {
   background-color: black;
+}
+
+
+.navbar{
+	background-color: black;
+}*/
+
+div.container{
+	background-color: black;
 }
