--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,25 @@
 /*div.container{
 	background-color: black;
 }*/
+
+.flex-wrapper{
+	display: flex;
+
+}
+
+.flex-wrapper img{
+	border-radius:100%;
+	height: 250px;
+    width: 250px;
+    margin-left: 58px;
+}
+
+.flex-wrapper div{
+	padding-left:4%;
+	padding-right:4%;
+	
+}
+
+/*footer{
+	display:flex;
+}*/
