--- a/src/App.css
+++ b/src/App.css
@@ -19,22 +19,15 @@
 
 
 
-.flex-wrapper{
-	display: flex;
-
+.row {
+	text-align: center;
 }
 
 .flex-wrapper img{
-	border-radius:100%;
-	height: 250px;
-    width: 250px;
-    margin-left: 58px;
+/*	border-radius:100%;*/
 }
 
 .flex-wrapper div{
-	padding-left:4%;
-	padding-right:4%;
-	
 }
 
 /*footer{
