working on the basic setup for the login page.

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,20 @@
 .flex-wrapper div{
 }
 
+.form-control{
+	width:30%;
+	margin:auto;
+}
+h1{
+	text-align: center;
+}
+
+#holder{
+   
+    width: 50%;
+    margin: auto;
+}
+
 /*footer{
 	display:flex;
 }*/
