--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ h1{
 }
 
 #holder{
-   
+
     width: 50%;
     margin: auto;
 }
@@ -47,3 +47,21 @@ h1{
 /*footer{
 	display:flex;
 }*/
+.javascript-wrapper{
+}
+.javascript-questions {
+	width: 500px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+
+}
+
+.javascript-documentation{
+	display: flex;
+}
+#javadocs {
+	position:absolute;
+	bottom: 800px;
+	width: 80%;
+}
