--- a/src/App.css
+++ b/src/App.css
@@ -78,10 +78,18 @@ h1 {
 @media (max-width: 700px){
 #subTitle {
     margin-top: --50%;
- } 
+ }
 }
 @media (max-width: 500px){
 #subTitle {
     margin-top: -142%;
- } 
+ }
+}
+
+#sticky-footer {
+  margin-bottom: 400px;
+}
+
+#sticky-footer-about {
+  margin-bottom: -80px;
 }
