--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f2fcfe;
+  /*background-color: #bdc3c7;*/
+}
 #title {
   font-size: 35px;
 }
@@ -92,4 +96,8 @@ h1 {
 
 #sticky-footer-about {
   margin-bottom: -80px;
+}
+
+.navbar{
+  background-color: black;
 }
