--- a/src/App.css
+++ b/src/App.css
@@ -135,12 +135,11 @@ h1 {
   background: #F1F2B5;
   border: 2px solid black;
   text-align: center;
-  list-style: none;
   padding-bottom: 12px;
   padding-top: 12px;
   margin-top: 25px;
   margin-bottom: 25px;
-  height: 100px;
+  height: 100 auto;
   font-size: 13pt;
 
 }
@@ -168,4 +167,11 @@ h1 {
 
 .button-margin {
   margin-bottom: 150px;
+}
+
+.answer-container {
+  display: flex;
+  flex-direction: column;
+  word-break: break-all;
+  overflow: scroll;
 }
